agregar logica para vender productos a punto de vencer primero